Dark mode fixed

--- a/app/globals.css
+++ b/app/globals.css
@@ -70,8 +70,11 @@
   * {
     @apply border-border;
   }
+  html {
+    @apply bg-background;
+  }
   body {
-    @apply bg-background text-foreground;
+    @apply bg-background text-foreground min-h-screen;
     font-feature-settings: "rlig" 1, "calt" 1;
   }
 }
